--- a/dep/src/MUMPS_5.3.1/Makefile.inc
+++ b/dep/src/MUMPS_5.3.1/Makefile.inc
@@ -124,7 +124,7 @@ LIBSEQ  = $(LAPACK) -L$(topdir)/libseq -lmpiseq
 
 # DEFINE HERE YOUR BLAS LIBRARY
 
-LIBBLAS = -L./ -lopenblas
+LIBBLAS = -L/usr/local/lib -lopenblas
 
 # DEFINE HERE YOUR PTHREAD LIBRARY
 LIBOTHERS = -lpthread
